@@ -56,6 +56,9 @@ Bugfixes and stuff:
 FLAC 1.1.3 updates:
     Josh Coalson
 
+SMPEG fixes:
+    Chris Nelson
+
 Other stuff:
     Your name here! Patches go to icculus@clutteredmind.org ...
 
